<resources>
    <string name="app_name">COVID-19-UPDATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COVID-19</string>
    <string name="nav_header_subtitle">SAFETY FIRST</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_statistics">COVID-19 Cases</string>
    <string name="menu_safetytips">Safety Tips</string>
    <string name="menu_Emergency">Emergency Lines</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Enter your name and click share to invite your friends to use this app</string>
</resources>
