<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_graphic"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_safetytips"
            android:icon="@drawable/ic_doctor"
            android:title="@string/menu_safetytips" />
        <item
            android:id="@+id/nav_emergencylines"
            android:icon="@drawable/phone"
            android:title="@string/menu_Emergency" />
        <item
            android:id="@+id/nav_diagnosis"
            android:icon="@drawable/ic_heart"
            android:title="Diagnose yourself" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="Share" />
    </group>
</menu>
