<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.covid_19_update.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.covid_19_update.ui.news.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_news" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.covid_19_update.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_safetytips"
        android:name="com.example.covid_19_update.ui.safetytips.SafetyTipsFragment"
        android:label="@string/menu_safetytips"
        tools:layout="@layout/fragment_safetytips" />
    <fragment
        android:id="@+id/nav_emergencylines"
        android:name="com.example.covid_19_update.ui.emergencylines.EmergencyLines"
        android:label="@string/menu_Emergency"
        tools:layout="@layout/emergency_lines_fragment" />
    <fragment
        android:id="@+id/nav_diagnosis"
        android:name="com.example.covid_19_update.DiagnoseFragment"
        android:label="Diagnosis"
        tools:layout="@layout/fragment_diagnose" />
</navigation>